--- a/index.html
+++ b/index.html
@@ -1,61 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>CryptoZombies front-end</title>
+    <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="./src/js/snakeCreatorABI.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 
 </head>
+
 <body>
 
 <div id="snakes"></div>
 
 <button onclick="getOwner(0)">Click me</button>
+
 <script>
+
+    window.ethereum.enable();
+
+
 
     var version = web3.version.api;
     console.log(version);
+
 
     let cryptoSnakes;
     var userAccount;
 
     function startApp() {
-        const cryptoSnakesAddress = "0xB8387ccA448Cb09AD046fB678f739B726F6770b9";
-        cryptoSnakes = web3.eth.contract(snakeCreatorABI, cryptoSnakesAddress);
+        const cryptoSnakesAddress = "0xE0fECD7E4637F4af37322b54940f7AD5c7b063bD";
+        //cryptoSnakes = web3js.eth.contract(snakeCreatorABI, cryptoSnakesAddress);
+        //cryptoSnakes = new web3js.eth.Contract(snakeCreatorABI, cryptoSnakesAddress); //Alte Version mit fehler
+        //cryptoSnakes =  web3.eth.contract(snakeCreatorABI, cryptoSnakesAddress);
+        cryptoSnakes = new web3js.eth.Contract(snakeCreatorABI, cryptoSnakesAddress, {gasPrice: '12345678', from: web3js.eth.accounts[0]});
+
+        console.log(cryptoSnakes);
+
+
 
     }
-
-
-    function getSnakeDetails(id) {
-        return cryptoSnakes.methods.snakes(id).call()
-    }
-
-    function snakeToOwner(id) {
-        return cryptoSnakes.methods.snakeToOwner(id).send()
-    }
-
-    function getOwner(id) {
-        snakeToOwner(id).then( result => {
-            console.log("Snake 15: " + JSON.stringify(result));
-        }).catch( err => {
-            console.log("Error:" + err);
-        })
-    }
-
-    function createInitalSnake(name) {
-        console.log("initial snake");
-        return cryptoSnakes.methods.createInitalSnake(name).send()
-    }
-
-
-
-    function createPayedSnake(name) {
-        return cryptoSnakes.methods.createPayedSnake(name).call()
-    }
-
-
-
 
     function displaySnake(ids) {
         for (id of ids) {
@@ -75,10 +60,56 @@
     }
 
 
-    window.addEventListener('load', function() {
+
+
+    function getSnakeDetails(id) {
+        return cryptoSnakes.methods.snakes(id).call()
+    }
+
+
+    function snakeToOwner(id) {
+        cryptoSnakes.from
+        return cryptoSnakes.methods.snakeToOwner(id).call()
+    }
+
+    function getOwner(id) {
+        snakeToOwner(id).then(result => {
+            console.log("Snake 15: " + JSON.stringify(result));
+        }).catch(err => {
+            console.log("Error:" + err);
+        })
+    }
+
+    function createInitalSnake(name) {
+        console.log("initial snake");
+        return cryptoSnakes.methods.createInitalSnake(name).send()
+    }
+
+
+    function createPayedSnake(name) {
+        return cryptoSnakes.methods.createPayedSnake(name).call()
+    }
+
+
+
+
+
+    window.addEventListener('load', function () {
         if (typeof web3 !== 'undefined') {
             console.log("Web3 is found")
-            web3js = new Web3(web3.currentProvider);
+            //web3js = new Web3(web3.currentProvider);
+            //console.log("Accountcheck " + web3js.eth);
+
+            //const ethEnabled = () => {
+               // if    (window.ethereum) {
+                    web3js = new Web3(window.ethereum);
+                    window.ethereum.enable();
+                  //  return true;
+                //}
+                //return false;
+            //}
+
+
 
         } else {
             console.log("Web3 is NOT found !!!")
