--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 <script>
 
-    window.ethereum.enable();
+    //window.ethereum.enable();
 
-    //Informations
+    //Initial Logs
     var version = web3.version.api;
     console.log(version);
 
@@ -56,30 +56,38 @@
     var userAccount;
 
     function startApp() {
-        const cryptoSnakesAddress = "0x95c9BcB7E052537B5d7Cb71Af5460c71048D597E";
-        //cryptoSnakes = web3js.eth.contract(snakeCreatorABI, cryptoSnakesAddress);
-        //cryptoSnakes = new web3js.eth.Contract(snakeCreatorABI, cryptoSnakesAddress); //Alte Version mit fehler
-        //cryptoSnakes =  web3.eth.contract(snakeCreatorABI, cryptoSnakesAddress);
+        const cryptoSnakesAddress = "0xD42a0D1904a223E0Fe76dacA9d0D133A4c94077F";
         cryptoSnakes = new web3js.eth.Contract(snakeCreatorABI, cryptoSnakesAddress, {
             gasPrice: '12345678',
             from: web3js.eth.accounts[0]
         });
-        console.log(cryptoSnakes);
+
+
+        userAccount = web3js.eth.accounts[0];
+        console.log("User Account: " + userAccount);
+/*        var accountInterval = setInterval(function() {
+
+            if (web3.eth.accounts[0] !== userAccount) {
+                userAccount = web3.eth.accounts[0];
+
+                getSnakeByOwner(userAccount).then(displaySnake);
+            }
+        }, 100);*/
     }
+
 
     function displaySnake(ids) {
         for (id of ids) {
             getSnakeDetails(id)
                 .then(function (snake) {
                     document.getElementById("snakes").innerHTML = `
-                <div class="snakes">
-                        <ul>
-                        <li>Name: ${snake.name}</li>
+                <div>
+                   <ul>
+                    <li>Name: ${snake.name}</li>
                     <li>DNA: ${snake.dna}</li>
                     <li>Level: ${snake.level}</li>
-
-                    </ul>
-                    </div> `
+                  </ul>
+                </div> `
                 });
         }
     }
@@ -107,22 +115,41 @@
 
     function createPayedSnake() {
         let name = document.getElementById("snakeInputName").value;
-        cryptoSnakes.methods.createPayedSnake(name).call()
-        const snake = getSnakeDetails(0);
-        console.log(snake);
+        cryptoSnakes.methods.createPayedSnake(name).send({ from: userAccount, value: web3js.utils.toWei("0.001", "ether") });
+
+        //getSnakeByOwner(userAccount).then(displaySnake);
+        //const snake = getSnakeDetails(1);
+        //console.log(snake);
     }
+
+    function getSnakeByOwner(owner) {
+        return cryptoSnakes.methods.getSnakesByOwner(owner).call()
+    }
+
+
+
+
+
+
+
+
+
+
+
+
 
     window.addEventListener('load', function () {
         if (typeof web3 !== 'undefined') {
             console.log("Web3 is found")
-            web3js = new Web3(window.ethereum);
-            window.ethereum.enable();
+            //web3js = new Web3(window.ethereum);
+            web3js = new Web3(web3.currentProvider);
+            //window.ethereum.enable();
         } else {
             console.log("Web3 is NOT found !!!")
         }
         startApp()
-
     })
 </script>
+
 </body>
 </html>
