fixed problems with account and connection to metamask

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     //window.ethereum.enable();
 
     //Initial Logs
-    var version = web3.version.api;
+    var version = window.web3.version.api;
     console.log(version);
 
 
@@ -56,14 +56,18 @@
     var userAccount;
 
     function startApp() {
-        const cryptoSnakesAddress = "0xD42a0D1904a223E0Fe76dacA9d0D133A4c94077F";
-        cryptoSnakes = new web3js.eth.Contract(snakeCreatorABI, cryptoSnakesAddress, {
+        const cryptoSnakesAddress = "0x70b2742Bb45F5DD81D6D283487d0B906d70AE722";
+        cryptoSnakes = new window.web3.eth.Contract(snakeCreatorABI, cryptoSnakesAddress, {
             gasPrice: '12345678',
-            from: web3js.eth.accounts[0]
+            from: window.web3.eth.accounts[0]
         });
 
 
-        userAccount = web3js.eth.accounts[0];
+        // userAccount = web3js.eth.accounts[0];
+        window.web3.eth.getAccounts((err, res) => {
+            console.log("user account: " + res[0])
+            userAccount = res[0];
+        });
         console.log("User Account: " + userAccount);
 /*        var accountInterval = setInterval(function() {
 
@@ -115,7 +119,7 @@
 
     function createPayedSnake() {
         let name = document.getElementById("snakeInputName").value;
-        cryptoSnakes.methods.createPayedSnake(name).send({ from: userAccount, value: web3js.utils.toWei("0.001", "ether") });
+        cryptoSnakes.methods.createPayedSnake(name).send({ from: userAccount, value: window.web3.utils.toWei("0.001", "ether") });
 
         //getSnakeByOwner(userAccount).then(displaySnake);
         //const snake = getSnakeDetails(1);
@@ -139,14 +143,23 @@
 
 
     window.addEventListener('load', function () {
-        if (typeof web3 !== 'undefined') {
-            console.log("Web3 is found")
-            //web3js = new Web3(window.ethereum);
-            web3js = new Web3(web3.currentProvider);
-            //window.ethereum.enable();
-        } else {
-            console.log("Web3 is NOT found !!!")
-        }
+
+            if (window.ethereum) {
+                window.web3 = new Web3(window.ethereum);
+                window.ethereum.enable();
+                console.log("Web3 is found")
+            }else {
+                console.log("Web3 is NOT found !!!")
+            }
+
+        //     if (typeof web3 !== 'undefined') {
+        //     console.log("Web3 is found")
+        //     //web3js = new Web3(window.ethereum);
+        //     web3js = new Web3(web3.currentProvider);
+        //     //window.ethereum.enable();
+        // } else {
+        //     console.log("Web3 is NOT found !!!")
+        // }
         startApp()
     })
 </script>
