--- a/index.html
+++ b/index.html
@@ -30,25 +30,15 @@
                 </button>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <div class="card-header">
-                Snakes
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="snakeItem"></li>
-            </ul>
-        </div>
+        <button type="button" class="btn btn-danger" onclick="createInitialSnake('initialSnake')">create
+            initial snake
+        </button>
+        <button type="button" class="btn badge-dark" onclick="showAllSnakes()">show all snakes
+        </button>
     </div>
 </div>
 
-<button onclick="getOwner(0)">Click me</button>
-
 <script>
-    //Initial Logs
-    var version = window.web3.version.api;
-    console.log(version);
-
-
     let cryptoSnakes;
     var userAccount;
 
@@ -63,20 +53,24 @@
             console.log("user account: " + res[0])
             userAccount = res[0];
         });
-        /*        var accountInterval = setInterval(function() {
 
-                    if (web3.eth.accounts[0] !== userAccount) {
-                        userAccount = web3.eth.accounts[0];
-
-                        getSnakeByOwner(userAccount).then(displaySnake);
-                    }
-                }, 100);*/
+        // var accountInterval = setInterval(function () {
+        //
+        //     if (getAccount() !== userAccount) {
+        //         userAccount = getAccount()
+        //
+        //        //  getSnakeByOwner(userAccount).then(displaySnakes);
+        //     }
+        // }, 100);
     }
 
+    async function showAllSnakes() {
+        let ids = await getSnakeByOwner(userAccount)
+        displaySnakes(ids)
+    }
 
-    function displaySnake(ids) {
-        console.log("ids: " + ids)
-        for (id of ids) {
+    function displaySnakes(snakeIds) {
+        for (id of snakeIds) {
             getSnakeDetails(id)
                 .then(function (snake) {
                     document.getElementById("snakes").innerHTML += `
@@ -91,25 +85,16 @@
         }
     }
 
-    function getSnakeDetails(id) {
-        return cryptoSnakes.methods.snakes(id).call();
+    function getSnakeDetails(snakeId) {
+        return cryptoSnakes.methods.snakes(snakeId).call();
     }
 
-    function snakeToOwner(id) {
-        return cryptoSnakes.methods.snakeToOwner(id).call()
+    async function getOwnerOfSnake(snakeId) {
+        return await cryptoSnakes.methods.snakeToOwner(snakeId).call()
     }
 
-    function getOwner(id) {
-        snakeToOwner(id).then(result => {
-            console.log("Snake 15: " + JSON.stringify(result));
-        }).catch(err => {
-            console.log("Error:" + err);
-        })
-    }
-
-    function createInitalSnake(name) {
-        console.log("initial snake");
-        return cryptoSnakes.methods.createInitalSnake(name).send()
+    function createInitialSnake(snakeName) {
+        return cryptoSnakes.methods.createInitalSnake(snakeName).send()
     }
 
     async function createPayedSnake() {
@@ -118,9 +103,6 @@
             from: userAccount,
             value: window.web3.utils.toWei("0.001", "ether")
         });
-
-        let ids = await getSnakeByOwner(userAccount)
-        displaySnake(ids)
     }
 
     function getSnakeByOwner(owner) {
