--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CryptoZombies front-end</title>
+    <title>CryptoSnakes</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <script type="text/javascript" src="./src/js/external/http_cdnjs.cloudflare.com_ajax_libs_jquery_3.3.1_jquery.js"></script>
     <script type="text/javascript" src="./src/js/snakeCreatorABI.js"></script>
     <script type="text/javascript" src="./src/js/external/web3.min.js"></script>
     <script type="text/javascript" src="./src/js/external/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="./src/js/snakeCreator.js"></script>
 </head>
 
 <body>
@@ -61,54 +62,6 @@
         //        //  getSnakeByOwner(userAccount).then(displaySnakes);
         //     }
         // }, 100);
-    }
-
-    async function showAllSnakes() {
-        document.getElementById("snakes").innerHTML = ""
-        let ids = await getSnakeByOwner(userAccount)
-        displaySnakes(ids)
-    }
-
-    function displaySnakes(snakeIds) {
-        for (id of snakeIds) {
-            getSnakeDetails(id)
-                .then(function (snake) {
-                    document.getElementById("snakes").innerHTML += `
-                <div>
-                   <ul>
-                    <li>Name: ${snake.name}</li>
-                    <li>DNA: ${snake.dna}</li>
-                    <li>Level: ${snake.level}</li>
-                  </ul>
-                </div> `
-                });
-        }
-    }
-
-    function getSnakeDetails(snakeId) {
-        return cryptoSnakes.methods.snakes(snakeId).call();
-    }
-
-    async function getOwnerOfSnake(snakeId) {
-        return await cryptoSnakes.methods.snakeToOwner(snakeId).call()
-    }
-
-    function createInitialSnake(snakeName) {
-        return cryptoSnakes.methods.createInitalSnake(snakeName).send({
-            from: userAccount
-        })
-    }
-
-    async function createPayedSnake() {
-        let name = document.getElementById("snakeInputName").value;
-        await cryptoSnakes.methods.createPayedSnake(name).send({
-            from: userAccount,
-            value: window.web3.utils.toWei("0.001", "ether")
-        });
-    }
-
-    function getSnakeByOwner(owner) {
-        return cryptoSnakes.methods.getSnakesByOwner(owner).call()
     }
 
     window.addEventListener('load', function () {
