snakes layour: 3 collumm

--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
 <body>
 
-<div id="snakes"></div>
+<div style="text-align: center">
+    <h1>CryptoSnake</h1>
+</div>
+
+<div id="snakes">
+    <h5>You have no Snake :(</h5>
+</div>
 
 
 
