redesign snake Ready for online-test. Go for it

--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
 </div>
 
 <div id="snakes">
-    <h5>You have no Snake :(</h5>
+    <h5>You have no Snakes yet. Create your initial Snake for free.</h5>
 </div>
-
-
 
 <div class="container">
     <div class="jumbotron">
