--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>CryptoSnakes</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
 
     <script src="src/js/utils.js"></script>
-    <script type="text/javascript"
-            src="./src/js/external/http_cdnjs.cloudflare.com_ajax_libs_jquery_3.3.1_jquery.js"></script>
     <script type="text/javascript" src="./src/js/abi/snakeCreatorABI.js"></script>
     <script type="text/javascript" src="./src/js/abi/SnakeReproductionABI.js"></script>
     <script type="text/javascript" src="./src/js/external/web3.min.js"></script>
-    <script type="text/javascript" src="./src/js/external/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="./src/js/snakeCreator.js"></script>
     <script type="text/javascript" src="./src/js/SnakeReproduction.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/snake.css">
-
 </head>
 
 <body>
@@ -28,8 +23,9 @@
 
 
 <div id="createBox">
+    <label for="snakeInputName">Snake Name: </label>
+   <input id="snakeInputName" type="text" name="snakeInputName" class="form-control">
 
-   <input id="snakeInputName" type="text" class="form-control">
 
     <button id="createSnake" type="button" class="button" onclick="createPayedSnake()">create
         snake
@@ -38,9 +34,11 @@
         create
         Inital Snake
     </button>
-
 </div>
 
+<button id="approveSnake" type="button" class="button" onclick="approveSnake()">create
+    snake
+</button>
 
 <div class="container">
     <div class="jumbotron">
@@ -67,14 +65,21 @@
 
 
 <div id="snakesview">
-    <h5 style="float: left;
-    text-align:right;
-    width:50%;"> Your Snakes</h5>
-     <p style="float: left;
-    text-align:right;
-    width:50%; cursor: pointer " onclick="showAllSnakes()">Refresh list <span style="font-size: 2em">🗘</span>
+    <p style="float: left; text-align:left; width:33.3333%;">
+        Snakes: <span id="snakeamount">0</span>
     </p>
+
+    <h3 style="float: left; text-align:center; width:33.3333%;">
+        Your Snakes
+    </h3>
+
+     <p style="float: left; text-align:right; width:33.3333%; cursor: pointer " onclick="showAllSnakes()">
+         Refresh list <span style="font-size: 2em">🗘
+     </span>
+    </p>
+
     <div id="snakes"> </div>
+
 </div>
 
 
