--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1>CryptoSnake</h1>
 </div>
 
-<div>
+<div class="boxwrapper">
     <div id="createBox">
         <h4>Create New Snake</h4>
         <label for="snakeInputName">Snake Name: </label>
